--- a/ui/src/bower.json
+++ b/ui/src/bower.json
@@ -12,7 +12,8 @@
     "angular": "1.6.3",
     "angular-ui-router": "1.0.0-rc.1 ",
     "components-font-awesome": "4.7.0",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "jquery": "^3.2.1"
   },
   "ignore": [
     "**/.*",
