--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,53 @@
 version: "2"
+
 services:
-    api:
-        build: ./api
-        depends_on:
-            - db
-        volumes:
-            - ./api:/src
-        ports:
-            - "80"
-        environment:
-            PHISH_TANK_API_KEY: 127433b680b0a5b4d0ff0d01254c905fae23c21eb427e1db89d5d36310b03df2
-            DEMO_APP_DOCKER_IP: "${DEMO_APP_DOCKER_IP}"
-    
-    ui:
-        build: ./ui
-        volumes:
-            - ./ui/build:/usr/share/nginx/html
-        ports:
-            - "80"
-    nginx:
-        build: ./nginx
-        depends_on:
-            - api
-            - ui
-        ports:
-            - "8088:8088"
-    db:
-        image: mongo:3.0
-        ports:
-            - "27017"
+  api:
+      build: ./api
+      depends_on:
+          - db
+      volumes:
+          # Use the locally mounted volume for local development
+          - api-build-volume:/src
+          # - ./api:/src
+      ports:
+          - "80"
+      environment:
+          DEMO_APP_DOCKER_IP: "${DEMO_APP_DOCKER_IP}"
+  ui:
+      build: ./ui
+      volumes:
+        # Use the locally mounted volume for local development
+        - ui-build-volume:/usr/share/nginx/html
+        #- ./ui/build:/usr/share/nginx/html
+      ports:
+          - "80"
+  
+  bbt:
+    build: ./bbt
+    depends_on:
+      - nginx
+
+  nginx:
+      build: ./nginx
+      depends_on:
+          - api
+          - ui
+      ports:
+          - "8088:8088"
+  db:
+      image: mongo:3.0
+      ports:
+          - "27017"
+  package:
+    build: ./package
+    volumes:
+      # Volumes for building UI
+      - ./ui:/app/ui/source
+      - ui-build-volume:/app/ui/build
+      # Volumes for build the api dependencies
+      - ./api:/app/api/source
+      - api-build-volume:/app/api/build
+
+volumes:
+  ui-build-volume:
+  api-build-volume:
