--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ciscoShortUrlProxyAPI",
+  "name" : "ciscoShortUrlProxyAPI",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test" : "jasmine-node --verbose ./test "
   },
   "dependencies": {
     "body-parser": "^1.17.2",
